--- a/Coffee Machine/Brush up your code/task-info.yaml
+++ b/Coffee Machine/Brush up your code/task-info.yaml
@@ -284,9 +284,8 @@ files:
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/projects/33/stages/180/implement#comment
-status: Solved
+status: Failed
 feedback:
-  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
-    Academy</a> to continue learning.
-  time: Tue, 17 May 2022 18:43:31 UTC
-record: -1
+  message: Execution failed
+  time: Mon, 30 May 2022 20:44:08 UTC
+record: 6
